--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: Say hello
         run: |
