--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,6 @@
 name: Deployment pipeline
 
-on: 
+on:
   push:
     branches:
       - main
@@ -16,4 +16,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Check style
-        run:  npm run eslint
+        run: npm run eslint
+      - name: Run tests
+      - run: npm run test
