--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -37,7 +37,8 @@ jobs:
           path: playwright-report/
           retention-days: 30
           
-      - uses: johnbeynon/render-deploy-action@v0.0.8
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
         with:
           service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
