--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   CONDITION_SKIP: ${{ contains(join(github.event.commits.*.message, ' '), '#skip') }}
-  CONDITION_PUSH: ${{ github.event_name == 'push' && }}
+  CONDITION_PUSH: ${{ github.event_name == 'push' }}
 
 jobs:
   simple_deployment_pipeline:
@@ -45,17 +45,17 @@ jobs:
           retention-days: 30
 
       - name: Trigger deployment
-        if: ${{ env.CONDITION_PUSH == true && env.CONDITION_SKIP == false }}
+        if: ${{ env.CONDITION_PUSH == 'true' && env.CONDITION_SKIP == 'false' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.MY_RENDER_SERVICE_ID }}?key=${{ secrets.MY_RENDER_API_KEY }}
   
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-latest
+    if: ${{ env.CONDITION_PUSH == 'true' && env.CONDITION_SKIP == 'false' }}
     steps:
       - uses: actions/checkout@v4
       
       - name: Bump version and push tag
-        if: ${{ env.CONDITION_PUSH == true && env.CONDITION_SKIP == false }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
