--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -51,11 +51,12 @@ jobs:
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-latest
-    if: ${{ github.env.CONDITION_PUSH == 'true' && github.env.CONDITION_SKIP == 'false' }}
+    
     steps:
       - uses: actions/checkout@v4
-      
+    
       - name: Bump version and push tag
+        if: ${{ env.CONDITION_PUSH == 'true' && env.CONDITION_SKIP == 'false' }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
