--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -56,7 +56,7 @@ jobs:
         if: success() && ${{ env.CONDITION_PUSH == 'true' && env.CONDITION_SKIP == 'false' }}
         with:
           severity: info
-          description: to https://full-stack-open-pokedex-ya6c.onrender.com/
+          description: to https://full-stack-open-pokedex-ya6c.onrender.com/ by $(git log -1 --pretty=format:'%an')
           details: Deploy succeeded!
           text: A new version of Pokedex deployed
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
@@ -66,13 +66,13 @@ jobs:
         if: failure()
         with:
           severity: error
-          description: last commit broke the build
+          description: commit ${{ github.sha }} by $(git log -1 --pretty=format:'%an') broke the build
           # details: Build failed!
           text: Build failed!
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
       - name: Cancelled
-        uses: rjstone/discord-webhook-notify@v1
+        uses: rjstone/discord-webhook-notify@v1.0.4
         if: cancelled()
         with:
           severity: warn
