--- a/.github/workflows/url_health_check.yaml
+++ b/.github/workflows/url_health_check.yaml
@@ -1,9 +1,10 @@
 name: URL health check
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '12 12 * * *'
-  # workflow_dispatch:
+    - cron: '56 9 * * *'
+  
 
 env:
   TZ: Europe/Vilnius
