--- a/.github/workflows/url_health_check.yaml
+++ b/.github/workflows/url_health_check.yaml
@@ -2,8 +2,8 @@ name: URL health check
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/5 * * * *'
+  # schedule:
+  #   - cron: '*/5 * * * *'
   
 
 env:
